# panna

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  functions.qmd
core/: Cargo.toml  notes.qmd
core/benches/: bench.rs
core/examples/: ceo.rs  glove.rs  graph.rs  puffinn-glove.rs
core/src/: brute_force.rs  collision_index.rs  cross_polytope.rs  dataset.rs  lib.rs  lsh.rs  main.rs  puffinn.rs  simhash.rs  types.rs
datasets/: Cargo.toml
datasets/src/: lib.rs
ffht/: Cargo.toml  build.rs
ffht/src/: lib.rs
lsh/: Cargo.toml
lsh/benches/: bench.rs
lsh/src/: collision_index.rs  cross_polytope.rs  lib.rs  simhash.rs  types.rs
notebooks/: extremal.qmd  filter.qmd  numpy-brute-force.py  scann.ipynb
