[package]
name = "core"
version = "0.1.0"
edition = "2021"

[lib]
name = "ann_playground_core"
path = "src/lib.rs"

[[bin]]
name = "ann_playground_core"
path = "src/main.rs"

[dependencies]
bincode = "1.3.3"
ffht = {path = "../ffht"}
hdf5 = { git = "https://github.com/aldanor/hdf5-rust" }
ndarray = { version = "0.15.6", features = ["blas"]}
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
ndarray-rand = "0.14.0"
once_cell = "1.17.1"
rayon = "1.7.0"
serde = { version = "1.0.162", features = ["derive"] }
thread_local = "1.1.7"
sha2 = "0.10.8"
hex = "0.4.3"
flate2 = "1.1.0"
bytemuck = { version = "1.21.0", features = ["derive"] }

[dev-dependencies]
divan = "0.1.0"
env_logger = "0.10.0"
progress-logger = "0.3.1"

[[bench]]
name = "bench"
harness = false

