[package]
name = "lsh"
version = "0.1.0"
edition = "2021"

[lib]
name = "lsh"
path = "src/lib.rs"

[[bin]]
name = "lsh"
path = "src/main.rs"

[dependencies]
ffht = {path = "../ffht"}
ndarray = { version = "0.15.6" }
ndarray-rand = "0.14.0"

[dev-dependencies]
criterion = "0.4.0"
hdf5 = "0.8.1"
ureq = "2.6.2"

[[bench]]
name = "bench"
harness = false

