[package]
name = "lsh"
version = "0.1.0"
edition = "2021"

[lib]
name = "lsh"
path = "src/lib.rs"

[[bin]]
name = "lsh"
path = "src/main.rs"

[dependencies]
ffht = {path = "../ffht"}
hdf5 = "0.8.1"
ndarray = { version = "0.15.6" }
ndarray-rand = "0.14.0"
rayon = "1.7.0"
thread_local = "1.1.7"

[dev-dependencies]
criterion = "0.4.0"
ureq = "2.6.2"

[[bench]]
name = "bench"
harness = false

